# Jutsu-Labs

./: .coverage 2  .coverage 3  .dockerignore  .env.docker.example  .env.example  .gitignore  .gitleaks.toml  .pip-audit.toml  ADX_CONTEXT_FIX_SUMMARY.md  CHANGELOG.md  CHANGELOG.md.backup  DEPENDENCY_INJECTION_FIX.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PASSKEY_IMPLEMENTATION_PLAN.md  README.developer.md  README.md  SYMBOL_NORMALIZATION_FIX.md  TEST_COVERAGE_REPORT.md  WARMUP_IMPLEMENTATION_REPORT.md  alembic.ini  debug_schwab_api.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_execution_timing_debug.py  test_injection_debug.py  test_wfo_fixes.py  token 2.json  token.json  validate_fixes_simple.py
.claude/: CLAUDE.md  MODULE_AGENT_TEMPLATE.md  WORKFLOW_CHECKLIST.md  WORKFLOW_GUARD.md
.github/: dependabot.yml
.serena/: project.yml
alembic/: env.py
claudedocs/: WHY_AGENT_ARCHITECTURE_NOT_USED.md
config/: config.yaml  config.yaml.example  live_trading_config.yaml  strategies_registry.yaml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
docker/: DEPLOYMENT_CHECKLIST.md  DOCKER_SETUP_SUMMARY.md  QUICK_REFERENCE.md  README.md  UNRAID_SETUP.md  docker-entrypoint.sh  nginx.conf  supervisord.conf
docs/: BEST_PRACTICES.md  CLAUDE.md  ENVIRONMENT_SETUP.md  EXECUTION_PLAN_Live_Trading.md  HISTORICAL_SIMULATION.md  Hierarchical_Adaptive_v3_5b-Strategy.md  Hierarchical_Adaptive_v3_5b_Golden_Strategy.md  Hierarchical_Adaptive_v3_9_Golden_Strategy.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PRIORITY.md  LIVE_TRADING_GUIDE.md  MULTI_STRATEGY_COMPARISON_UI_SPEC.md  MULTI_STRATEGY_ENGINE_IMPLEMENTATION.md  PRD-Auto-Trader-Live-v2.md  PRD-Auto-Trader-Live.md  PRD.md  SECURITY_HARDENING.md  SETUP_COMPLETE.md  SYSTEM_DESIGN.md  TROUBLESHOOTING.md  V2_API_BASELINE_LIMITATION.md  backtest_dashboard_ui_spec.md  multi-user-implementation-plan.md  portfolio-snapshot-contract.md  regime_overlay_implementation_plan.md  regime_performance_calculation_methodology.md
grid-configs/: example_grid_search.yaml  grid_search_hierarchical_adaptive_v2_5_phase1.yaml  grid_search_hierarchical_adaptive_v2_6_Phase2.yaml  grid_search_hierarchical_adaptive_v2_8_Edge-Test.yaml  grid_search_hierarchical_adaptive_v2_8_Phase1.yaml  grid_search_hierarchical_adaptive_v2_8_Phase2.yaml  grid_search_hierarchical_adaptive_v2_8_alpha_seeker.yaml  wfo_hierarchical_adaptive_v2_6.yaml
jutsu_api/: __init__.py  config.py  dependencies.py  main.py  middleware.py
output/: MACD_Trend_v4_20251107_142520.csv  MACD_Trend_v4_20251107_142520_trades.csv  MACD_Trend_v6_20251109_205318.csv  MACD_Trend_v6_20251109_205318_summary.csv  MACD_Trend_v6_20251109_205318_trades.csv
scripts/: add_strategy_id_columns.py  backfill_daily_performance.py  backfill_paper_trading.py  check_credentials.py  cleanup_weekend_data.py  com.jutsu.eod-portfolio-snapshot.plist.example  daily_dry_run.py  daily_multi_strategy_run.py  debug_schwab_auth.js  demo_baseline_cli.py  emergency_exit.py  eod_portfolio_snapshot.py  health_check.py  (+17 more)
(+2136 files in other folders)
